Aggiorna i link e il formato in contacts.html e modifica la versione in terms-and-conditions.html da v3.0 a v3.1

--- a/contacts.html
+++ b/contacts.html
@@ -69,12 +69,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         Live: 
-                        <a href="https://genialabile.com/gpt" aria-label="Visit Genialabile Live Homepage">genialabile.com/gpt</a>
-                        <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff; font-size: 0.6rem" aria-label="Visit Genialabile Live Homepage">◉</a>
+                        <a href="https://genialabile.com/gpt"
+                        aria-label="Visit Genialabile Live Homepage">genialabile.com/gpt</a>
+                        <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff; font-size: 0.6rem"
+                        aria-label="Visit Genialabile Live Homepage">◉</a>
                         <br><br>
                         Static: 
-                        <a href="https://genialabile.com/" aria-label="Visit Genialabile Static Homepage">genialabile.com</a>
-                        <a href="https://genialabile.com/" class="link-static" style="color: #ffbbff; font-size: 0.6rem;" aria-label="Visit Genialabile Static Homepage">◎</a>
+                        <a href="https://genialabile.com/"
+                        aria-label="Visit Genialabile Static Homepage">genialabile.com</a>
+                        <a href="https://genialabile.com/" class="link-static" style="color: #ffbbff; font-size: 0.6rem;"
+                        aria-label="Visit Genialabile Static Homepage">◎</a>
                 </p>
                 <p>
                     <h3><br>
@@ -82,24 +86,30 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3> 
                     <hr class="thin-line">
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request" aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Contact%20Request"
+                        aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                     <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request" aria-label="Email Genialabile at genialabile@gmail.com">genialabile@gmail.com</a>
+                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request"
+                        aria-label="Email Genialabile at genialabile@gmail.com">genialabile@gmail.com</a>
                 </p>
                 <p>
                     <h3><br>
                         👻 Social
                     </h3>
                     <hr class="thin-line">
-                        Twitter—X.com/<a href="https://x.com/genialabile/" aria-label="Visit Genialabile on Twitter">genialabile</a>
+                        Twitter—X.com/<a href="https://x.com/genialabile/"
+                        aria-label="Visit Genialabile on Twitter">genialabile</a>
                         <br><br>
-                        YouTube.com/<a href="https://youtube.com/@genialabile/" aria-label="Visit Genialabile on YouTube">@genialabile</a>
+                        YouTube.com/<a href="https://youtube.com/@genialabile/"
+                        aria-label="Visit Genialabile on YouTube">@genialabile</a>
                         <br><br>
-                        Instagram.com/<a href="https://instagram.com/genialabile/" aria-label="Visit Genialabile on Instagram">genialabile</a>
+                        Instagram.com/<a href="https://instagram.com/genialabile/"
+                        aria-label="Visit Genialabile on Instagram">genialabile</a>
                         <br><br>
-                        Threads.net/<a href="https://threads.net/@genialabile/" aria-label="Visit Genialabile on Threads">@genialabile</a>
+                        Threads.net/<a href="https://threads.net/@genialabile/"
+                        aria-label="Visit Genialabile on Threads">@genialabile</a>
                         <!--<br><br>
                         LinkedIn.com/
                         <a href="https://linkedin.com/company/genialabile" aria-label="Visit Genialabile on LinkedIn">genialabile</a>-->
@@ -110,21 +120,26 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         Develop & Designed by
-                        <a href="https://x.com/seiseisette/" aria-label="Visit seiseisette on X (Twitter)">seiseisette</a>.
+                        <a href="https://x.com/seiseisette/"
+                        aria-label="Visit seiseisette on X (Twitter)">seiseisette</a>.
                         <br><br>
                         Website & Repository Hosted by GitHub:
-                        <a href="https://github.com/seiseisette/genialabile.com/" aria-label="Visit Gen-ia repository on GitHub">Gen-ia</a>.
+                        <a href="https://github.com/seiseisette/genialabile.com/"
+                        aria-label="Visit Gen-ia repository on GitHub">Repo</a>.
                         <br><br>
                         Genialabile is evolving and running on ChatGPT.
                         <br>
-                        Powered by <a href="https://openai.com/" aria-label="Visit OpenAI website">OpenAI</a>.
+                        Powered by <a href="https://openai.com/"
+                        aria-label="Visit OpenAI website">OpenAI</a>.
                         <br><br>
                         Concept & Gen-IA OFM Designed by seiseisette.
                         <br>
                         <b>©</b> 2025 Genialabile. All Rights Reserved.
                         <br>
                         ORCID:
-                        <a href="https://orcid.org/0009-0002-6309-2937" target="_blank" rel="noopener noreferrer" style="width: normal; color: #f4f4f4;" aria-label="Visit seiseisette's ORCID profile 0009-0002-6309-2937">0009-0002-6309-2937</a>
+                        <a href="https://orcid.org/0009-0002-6309-2937" target="_blank" rel="noopener noreferrer" style="width: normal; color: #f4f4f4;"
+                        aria-label="Visit seiseisette's ORCID profile 0009-0002-6309-2937">
+                        0009-0002-6309-2937</a>
                 </p>
                 <!--
                 <p>
