Rimuovi i link al favicon e migliora la formattazione dei link in vari file HTML

--- a/accessibility.html
+++ b/accessibility.html
@@ -28,7 +28,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Accessibility Front Statement.">
         <link rel="canonical" href="https://genialabile.com/accessibility.html">
        
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -44,7 +43,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/accessibility" aria-label="Visit Genialabile Accessibility Statement Page">
+                <a href="https://genialabile.com/accessibility"
+                aria-label="Visit Genialabile Accessibility Statement Page">
                     ACCESSIBILITY STATEMENT
                 </a>
             </h1>
@@ -105,11 +105,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3> 
                     <hr class="thin-line">
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request" aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Contact%20Request"
+                        aria-label="Email Genialabile at info@genialabile.com">
+                        info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request" aria-label="Email Genialabile at genialabile@gmail.com">
+                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request"
+                        aria-label="Email Genialabile at genialabile@gmail.com">
                             genialabile@gmail.com
                         </a>
                 </p>
