--- a/contacts.html
+++ b/contacts.html
@@ -27,8 +27,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | Contacts</title>
         <meta name="description" content="Genialabile - Contacts & Social Media and Credits">
         <link rel="canonical" href="https://genialabile.com/contacts.html">
-
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -70,13 +68,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         Live: 
                         <a href="https://genialabile.com/gpt"
-                        aria-label="Visit Genialabile Live Homepage">genialabile.com/gpt</a>
+                        aria-label="Visit Genialabile Live Homepage">
+                        genialabile.com/gpt</a>
                         <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff; font-size: 0.6rem"
                         aria-label="Visit Genialabile Live Homepage">◉</a>
                         <br><br>
                         Static: 
                         <a href="https://genialabile.com/"
-                        aria-label="Visit Genialabile Static Homepage">genialabile.com</a>
+                        aria-label="Visit Genialabile Static Homepage">
+                        genialabile.com</a>
                         <a href="https://genialabile.com/" class="link-static" style="color: #ffbbff; font-size: 0.6rem;"
                         aria-label="Visit Genialabile Static Homepage">◎</a>
                 </p>
@@ -87,12 +87,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         Gen:
                         <a href="mailto:info@genialabile.com?subject=Contact%20Request"
-                        aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
+                        aria-label="Email Genialabile at info@genialabile.com">
+                        info@genialabile.com</a>
                         <i>(limited uptime)</i>
                     <br><br>
                         Gmail:
                         <a href="mailto:genialabile@gmail.com?subject=Contact%20Request"
-                        aria-label="Email Genialabile at genialabile@gmail.com">genialabile@gmail.com</a>
+                        aria-label="Email Genialabile at genialabile@gmail.com">
+                        genialabile@gmail.com</a>
                 </p>
                 <p>
                     <h3><br>
