--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Static Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/index.html">
       
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
           <script>
             fetch('https://genialabile.com/header.html')
@@ -44,7 +43,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/" aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
+                <a href="https://genialabile.com/"
+                aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
                     GENiALABILE
                 </a>
             </h1>
