--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,7 +28,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Privacy Policy Content.">
         <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
    
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -44,7 +43,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/privacy-policy.html" aria-label="Read our full Privacy Policy" title="Read our full Privacy Policy">
+                <a href="https://genialabile.com/privacy-policy.html"
+                aria-label="Read our full Privacy Policy" title="Read our full Privacy Policy">
                     PRIVACY POLICY
                 </a>
             </h1>
@@ -94,8 +94,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         # Opt-Out:
                         <br>
                         Users can manage the tracking through the
-                        <a href="https://tools.google.com/dlpage/gaoptout"
-                        target="_blank" style="font-weight: normal;"
+                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;"
                         aria-label="Install Google Analytics Opt-Out Browser Add-on to disable tracking">
                         Google Analytics Opt-Out Browser Add-on</a>.
                 </p>
@@ -134,14 +133,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🍪 Cookies
                     </h3>
                     <hr class="thin-line">
-                        Please visit our <a href="https://genialabile.com/cookie-policy.html"
-                        style="font-weight: normal;" aria-label="Visit Cookie Policy page">Cookie Policy</a>
+                        Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;"
+                        aria-label="Visit Cookie Policy page">Cookie Policy</a>
                         for more information about how we use cookies on this website.
                         Cookies are used to improve user experience.
                         Manage your preferences through browser settings or via the 
-                        <a href="https://www.youronlinechoices.com/" target="_blank"
-                        style="font-weight: normal;" aria-label="Visit Your Online Choices platform (opens in new tab)">
-                        Your Online Choices</a> platform.
+                        <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;"
+                        aria-label="Visit Your Online Choices platform (opens in new tab)">
+                        Your Online Choices</a>
+                        platform.
                </p>
                 <p>
                     <h3><br>
