--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -28,7 +28,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Cookie Policy Content.">
         <link rel="canonical" href="https://genialabile.com/cookie-policy.html">
        
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -44,7 +43,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/cookie-policy" aria-label="Visit Genialabile Cookie Policy Page">
+                <a href="https://genialabile.com/cookie-policy"
+                aria-label="Visit Genialabile Cookie Policy Page">
                     COOKIE POLICY
                 </a>
             </h1>
@@ -146,7 +146,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <br>
                         Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
                         Please take a moment to review this policy periodically, same for our
-                        <a href="https://genialabile.com/privacy-policy.html" aria-label="Visit Privacy Policy">
+                        <a href="https://genialabile.com/privacy-policy.html"
+                        aria-label="Visit Privacy Policy">
                             Privacy Policy</a>.
                 </p>
                 <p>
