--- a/footer.html
+++ b/footer.html
@@ -25,19 +25,26 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     <!-- MUST -->
         <p id="footer-text footer-banner">
-            <a href="https://genialabile.com/gpt" class="link-live" aria-label="Genialabile Live Home Page">◉</a>
+            <a href="https://genialabile.com/gpt" class="link-live"
+            aria-label="Genialabile Live Home Page">◉</a>
             |
-            <a href="https://genialabile.com/contacts" class="imp-p" aria-label="Contact & Social">CONTACT</a>
+            <a href="https://genialabile.com/contacts" class="imp-p"
+            aria-label="Contact & Social">CONTACT</a>
             |
-            <a href="https://genialabile.com/terms-and-conditions" class="imp-p" aria-label="Terms & Conditions">TERMS</a>
+            <a href="https://genialabile.com/terms-and-conditions" class="imp-p"
+            aria-label="Terms & Conditions">TERMS</a>
             |
-            <a href="https://genialabile.com/privacy-policy" class="imp-p" aria-label="Privacy Policy">PRIVACY</a>
+            <a href="https://genialabile.com/privacy-policy" class="imp-p"
+            aria-label="Privacy Policy">PRIVACY</a>
             |
-            <a href="https://genialabile.com/cookie-policy" class="imp-p" aria-label="Cookie Policy">COOKIE</a>
+            <a href="https://genialabile.com/cookie-policy" class="imp-p"
+            aria-label="Cookie Policy">COOKIE</a>
             |
-            <a href="https://genialabile.com/accessibility" class="imp-p" aria-label="Accessibility">ACCESS</a>
+            <a href="https://genialabile.com/accessibility" class="imp-p"
+            aria-label="Accessibility">ACCESS</a>
             |
-            <a href="https://genialabile.com/" class="link-static" aria-label="Genialabile Static Home Page">◎</a>
+            <a href="https://genialabile.com/" class="link-static"
+            aria-label="Genialabile Static Home Page">◎</a>
         </p>
     <!-- MUST -->
     
