--- a/genialabile-gpt-access.html
+++ b/genialabile-gpt-access.html
@@ -28,7 +28,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - GPT-Access designed for Genialabile & Co.">
         <link rel="canonical" href="https://genialabile.com/genialabile-gpt-access.html">
       
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -44,7 +43,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/genialabile-gpt-access.html" aria-label="Accesso GPT Genialabile" title="GPT Access Genialabile">
+                <a href="https://genialabile.com/genialabile-gpt-access.html"
+                aria-label="Accesso GPT Genialabile" title="GPT Access Genialabile">
                     GPT ACCESS
                 </a>
             </h1>
@@ -64,11 +64,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         If you have any questions, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request" aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Contact%20Request"
+                        aria-label="Email Genialabile at info@genialabile.com">
+                        info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request" aria-label="Email Genialabile at genialabile@gmail.com">
+                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request"
+                        aria-label="Email Genialabile at genialabile@gmail.com">
                             genialabile@gmail.com
                         </a>
                 </p>
