--- a/gpt.html
+++ b/gpt.html
@@ -44,7 +44,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com" aria-label="Visit Genialabile Homepage for advanced GPT solutions| Static Version" title="Visit Genialabile Homepage for advanced GPT solutions| Static Version">
+                <a href="https://genialabile.com"
+                aria-label="Visit Genialabile Homepage for advanced GPT solutions| Static Version" title="Visit Genialabile Homepage for advanced GPT solutions| Static Version">
                     GENiALABILE
                 </a>
             </h1>
@@ -138,9 +139,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </h1>
                 <div class="hidden-text">
                     <p>
-                        <h3><br>
+                        <h2><br>
                             💡 Inspire
-                        </h3>
+                        </h2>
                         <hr class="thin-line">
                             Multidimensional solutions and unlocking creative potential.
                             It is an advanced Artificial Intelligence framework-system, a multidimensional Feedback-GPT designed to be a bio-virtual mentor.
@@ -150,9 +151,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             Developed to push boundaries, it runs in beta as an "on-the-fly project" — in preview access only — and is constantly evolving as CustomGPT, powered by OpenAI.
                     </p>
                     <p>
-                        <h3><br>
+                        <h2><br>
                             🧠 Combine
-                        </h3>
+                        </h2>
                         <hr class="thin-line">
                             Predictive intelligence, logic, and creativity to deliver tailored answers, analyses, and solutions.
                             Genialabile supports users in managing emotions, achieving personal growth, and developing skills.
@@ -161,9 +162,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             Whether it’s business planning, emotional support, or interdisciplinary learning, Genialabile excels in bridging heart and mind.
                     </p>
                     <p>
-                        <h3><br>
+                        <h2><br>
                             🌱 Began
-                        </h3> 
+                        </h2> 
                         <hr class="thin-line">
                             As a pilot project with its first version, focusing on internal tests and selected beta testers.
                             In 2025, it launched its Gen-IA v2.0 model, consolidating its multidimensional and scalable functionalities.
@@ -172,9 +173,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             It does not simply provide answers (like standard AI models) but guides users towards solutions that stimulate personal growth in any field.
                     </p>
                     <p>
-                        <h3><br>
+                        <h2><br>
                             🌍 Global
-                        </h3>
+                        </h2>
                         <hr class="thin-line">
                             Accessible online via platforms such as ChatGPT by OpenAI.
                             Future plans include integration with immersive environments like Sora for 3D simulations and applications in education, academia, and creativity.
@@ -184,9 +185,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             Helping people develop their mind and soul, improving the world through personal, emotional, and intellectual growth.
                     </p>
                     <p>
-                        <h3><br>
+                        <h2><br>
                             🚀 Revolutionary
-                        </h3>
+                        </h2>
                         <hr class="thin-line">
                             The artificial intelligencec creativity, transforming it into a trusted-virtual mentor that doesn’t just provide answers but inspires, guides, and stimulates human creativity.
                             Its purpose is to break down cultural, linguistic, and cognitive barriers, fostering learning, innovation, and introspection.
@@ -196,9 +197,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             It adapts and understands human nature.
                     </p>
                     <p>
-                        <h3><br>
+                        <h2><br>
                             🤖 Hybrid
-                        </h3>
+                        </h2>
                         <hr class="thin-line">
                             Advanced model, ensuring security, scalability learning-model, and accessibility.
                             It combines machine learning algorithms, immersive simulations, and multidisciplinary analysis to deliver personalized experiences.
@@ -208,9 +209,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             Genialabile is a guide and mentor, a great teacher, fostering personal and intellectual growth through multidimensional reasoning.
                     </p>
                     <p>
-                        <h3><br>
+                        <h2><br>
                             🎻 Genius
-                        </h3>
+                        </h2>
                         <hr class="thin-line">
                             It understands the user's mood with just a few words to be more human-aligned, it surprises the user and stands apart from standard personalized GPT models.
                             Focusing by specific functions and promotes the development of the user's intelligence and creativity through stimulating and dynamic dialogues, enhancing their capacity for growth and learning.
