--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -28,7 +28,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Terms & Conditions Disclosure.">
         <link rel="canonical" href="https://genialabile.com/terms-and-conditions.html">
     
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -44,7 +43,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Read our Terms and Conditions">
+                <a href="https://genialabile.com/terms-and-conditions.html"
+                aria-label="Read our Terms and Conditions" title="Read our Terms and Conditions">
                     TERMS & CONDITIONS
                 </a>
             </h1>
@@ -54,7 +54,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        Please read these Terms & Conditions [<a href="https://genialabile.com/terms-and-conditions" aria-label="Current Terms and Conditions page">Current Page</a>]
+                        Please read these Terms & Conditions
+                        [<a href="https://genialabile.com/terms-and-conditions"
+                        aria-label="Current Terms and Conditions page">
+                        Current Page</a>]
                         carefully before using our website and services.
                         By accessing or using our platform, you agree to comply with these Terms.
                         If you do not agree, you must not use our services.
@@ -88,14 +91,19 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         You have the right to access, correct, or delete your personal data.
                         <br>
                         We process your data based on your consent, contract necessity, or legitimate interests as allowed by GDPR.
-                        For more details, refer to our <a href="https://genialabile.com/privacy-policy" aria-label="Read our Privacy Policy">Privacy Policy</a>.
+                        For more details, refer to our
+                        <a href="https://genialabile.com/privacy-policy"
+                        aria-label="Read our Privacy Policy">
+                        Privacy Policy</a>.
                         <br><br>
                         US Users (CCPA):
                         <br>
                         # Under the California Consumer Privacy Act (CCPA).
                         <br><br> 
                         You have the right to know what personal data we collect and request its deletion.
-                        For more information, visit our <a href="https://genialabile.com/privacy-policy" aria-label="Read our Privacy Policy">Privacy Policy</a>.
+                        For more information, visit our <a href="https://genialabile.com/privacy-policy"
+                        aria-label="Read our Privacy Policy">
+                        Privacy Policy</a>.
                 </p>
                 <p>
                     <h3><br>
@@ -142,7 +150,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         We do not offer directly services from this website or our platforms or networks at the moment.
-                        For more information, please <a href="https://genialabile.com/contacts" aria-label="Visit our Contact page">contact us</a>.
+                        For more information, please <a href="https://genialabile.com/contacts"
+                        aria-label="Visit our Contact page">
+                        contact us</a>.
                         <br>
                         As a side note, it is important to know and understand the following:
                         <br><br>
