Modifica l'etichetta "Email" in "Mail" nel file contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -82,10 +82,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
                 <p>
                     <h3><br>
-                        ✉️ Email
+                        ✉️ Mail
                     </h3> 
                     <hr class="thin-line">
-                        Gen:
+                        Email:
                         <a href="mailto:info@genialabile.com?subject=Contact%20Request"
                         aria-label="Email Genialabile at info@genialabile.com">
                         info@genialabile.com</a>
