Aggiungi configurazione Nginx per reindirizzamento HTTP a HTTPS e gestione delle risorse statiche; crea un nuovo file sitemap e footer

--- a/2header.html
+++ b/2header.html
@@ -16,8 +16,8 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.1 (160125)
-# URL: https://genialabile.com/header.html
+# Version: v3.1 (160125) >>>>>>>
+# URL: https://genialabile.com/2header.html
 ===============================================================================
 -->
 
@@ -52,8 +52,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" crossorigin="anonymous"></noscript>
   
   <!-- Preload CSS -->
-  <link rel="preload" href="https://genialabile.com/assets/styles/uni-style.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
-  <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/uni-style.css" crossorigin="anonymous"></noscript>
+  <link rel="preload" href="https://genialabile.com/assets/styles/2uni-style.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
+  <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/2uni-style.css" crossorigin="anonymous"></noscript>
   
   <!-- Preload Font Awesome -->
   <link rel="preload" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'"integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmj58uS4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
