--- a/test.html
+++ b/test.html
@@ -231,7 +231,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <!-- footer.html -->  
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
-                    fetch('https://genialabile.com/footer.html')
+                    fetch('https://genialabile.com/2footer.html')
                         .then(response => response.text())
                         .then(data => {
                             const footerContent = document.getElementById('footer-content');
