Aggiorna il colore di accento nel CSS per i titoli da rosso a magenta

--- a/2index.html
+++ b/2index.html
@@ -40,7 +40,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <!-- header.html --> 
     </head>
     <!-- SHIFT -->
-    <body style="background-color: var(--bg-color); color: var(--info-text);">
+    <body>
         <main>
             <h1>
                 <a href="https://genialabile.com/"
