--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <!-- header.html -->
     </head>
     <!-- SHIFT -->
-    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+    <body>
         <main>
             <h1>
                 <a href="https://genialabile.com"
@@ -279,11 +279,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     }, 2000);
                 });
 
-                // Inserisci qui il codice per il padding coerente
+                // add padding to typing-container
                 document.addEventListener("DOMContentLoaded", function () {
                     const typingContainer = document.getElementById("typing-container");
                     if (typingContainer) {
-                        typingContainer.style.padding = "2rem"; // Applica padding coerente
+                        typingContainer.style.padding = "2rem"; //Force padding to avoid overlap
                     }
                 });
             </script>
