--- a/test.html
+++ b/test.html
@@ -283,7 +283,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 document.addEventListener("DOMContentLoaded", function () {
                     const typingContainer = document.getElementById("typing-container");
                     if (typingContainer) {
-                        typingContainer.style.padding = "2rem"; //Force padding to avoid overlap
+                        typingContainer.style.padding = "2rem"; // Sincronizza con CSS globale
                     }
                 });
             </script>
