--- a/2index.html
+++ b/2index.html
@@ -40,7 +40,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <!-- header.html --> 
     </head>
     <!-- SHIFT -->
-    <body>
+    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
                 <a href="https://genialabile.com/"
