--- a/2index.html
+++ b/2index.html
@@ -16,16 +16,18 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.1 (160125)
-# URL: https://genialabile.com/2index.html
+# Version: v3.2 (190125)
+# URL: https://genialabile.com/index.html
 ===============================================================================
 -->
 <!-- START -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | 2index</title>
-        <meta name="description" content="Genialabile - 2index">
+        <title>Genialabile | Home</title>
+        <meta name="description" content="Genialabile - Homepage of the AI mentor and virtual assistant.">
+        <!-- Meta Page -->
+        <meta name="keywords" content="Genialabile Homepage. Gen-ia, AI mentor, virtual assistant, Advanced GPT">
         <link rel="canonical" href="https://genialabile.com/2index.html">
       
         <!-- header.html -->
