--- a/accessibility.html
+++ b/accessibility.html
@@ -16,7 +16,7 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.1 (160125)
+# Version: v3.2 (190125)
 # URL: https://genialabile.com/accessibility.html
 ===============================================================================
 -->
@@ -26,6 +26,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <head>
         <title>Genialabile | Accessibility</title>
         <meta name="description" content="Genialabile - Accessibility Front Statement.">
+        <!-- Meta Page -->
+        <meta name="keywords" content="Genialabile, Accessibility Page. ADA, CCPA, WCAG, Screen Reader, Keyboard Navigation">
         <link rel="canonical" href="https://genialabile.com/accessibility.html">
        
         <!-- header.html -->
@@ -65,23 +67,19 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                     We have implemented the following features to enhance accessibility:
                     <br><br>
+                    # Screen reader compatibility for visually impaired users.
+                    <br><br>
+                    # Text scaling support for users with visual difficulties.
+                    <br><br>
                     # High contrast design for better readability.
                     <br><br>
                     # Color contrast adjustments for better readability.
+                    <br>
+                    All contrast ratios for text, links, and interactive elements meet or exceed WCAG AA and AAA compliance levels, ensuring a wide range of usability for buttons, titles, and body text.
                     <br><br>
-                    # Screen reader compatibility for visually impaired users.
-                    <!--
-                    <br><br>
-                    [·] Screen reader compatibility for visually impaired users.
-                    [·] Keyboard navigation for users without a mouse.
-                    <br><br>
-                    [·] Text scaling support for users with visual difficulties.
-                    <br><br>
-                    [·] Screen reader compatibility for visually impaired users.
-                     [·] Keyboard navigation for users without a mouse.
-                    <br><br>
-                    [·] Text scaling support for users with visual difficulties.
-                    <br>-->
+                    # Keyboard navigation compatibility for users without a mouse.  
+                    <br>
+                    The website is fully navigable using keyboard shortcuts, ensuring accessibility for users with limited mobility or those relying on alternative navigation tools.
                 </p>
                 <p>
                     <h3><br>
