--- a/cli.html
+++ b/cli.html
@@ -39,13 +39,17 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 })
                 .catch(error => console.error('Error fetching header:', error));
         </script>
-        <!-- compliler.css -->
+
+        <!-- compiler.css -->
         <link rel="preload" href="https://genialabile.com/assets/styles/animations/compiler.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
         <noscript>
             <link rel="stylesheet" href="https://genialabile.com/assets/styles/animations/compiler.css" crossorigin="anonymous">
         </noscript>
+
     </head>
+
     <!-- SHIFT -->
+
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <div class="sr-only" role="region" aria-labelledby="sr-title">
