--- a/cli.html
+++ b/cli.html
@@ -42,9 +42,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
         <!-- compiler.css -->
         <link rel="preload" href="https://genialabile.com/assets/styles/animations/compiler.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
-        <noscript>
-            <link rel="stylesheet" href="https://genialabile.com/assets/styles/animations/compiler.css" crossorigin="anonymous">
-        </noscript>
+        <noscript><link rel="stylesheet" href="https://genialabile.com/assets/styles/animations/compiler.css" crossorigin="anonymous"></noscript>
 
     </head>
 
