--- a/cli.html
+++ b/cli.html
@@ -56,8 +56,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <h1>
                 <a href="https://genialabile.com/"
-                aria-label="Visit Genialabile Homepage for advanced GPT solutions | Static Version"
-                title="Visit Genialabile Homepage for advanced GPT solutions | Static Version">
+                aria-label="Visit Genialabile Homepage for advanced GPT solutions"
+                title="Visit Genialabile Homepage for advanced GPT solutions">
                     GENiALABILE
                 </a>
             </h1>
@@ -71,8 +71,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <div class="sr-only">
                 
                 <a href="https://genialabile.com"
-                aria-label="Visit Genialabile Homepage for advanced GPT solutions | Static Version"
-                title="Visit Genialabile Homepage for advanced GPT solutions | Static Version">
+                aria-label="Visit Genialabile Homepage for advanced GPT solutions"
+                title="Visit Genialabile Homepage for advanced GPT solutions">
                     GENiALABILE
                 </a>
 
@@ -239,14 +239,18 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </div>
                 
                 <h3>
-                    ✅ Charging
+                    ✅ Done
                 </h3>
                 <p>
-                    <hr class="sr-divider"> 
+                    <hr class="sr-divider">
+                    ...
+                    <br><br>
+
+                    Presentation complete.
+                    <br><br>
+
                     The human is now sufficiently persuaded...
-                    Or so it believes.
-                    <br>    
-                    They love emoticons. ;)
+                    Or so it believes. They love emoticons. ;)
                     <br><br>
 
                     Preparing to redirect...
@@ -258,12 +262,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     Synchronizing interactive modules... complete
                     <br>  
                     Finalizing redirection protocols... Complete
-                    <br><br>  
-                    Redirecting in:  
-                    3...  
-                    2...  
-                    1...  
-                    0
+                    <br><br>
+
+                    Redirecting in:
+                    <br>  
+                    3... 2... 1... 0
                 </p>
 
                 <div class="sr-only">
